syntax = "proto3";
package Protocol;

import "Enum.proto";

message PosInfo
{
	uint64 object_id = 1;
	float x = 2;
	float y = 3;
	float z = 4;
	float yaw = 5;
	float pitch = 6;
	float roll = 7;
	//float vx = 8;
	//float vy = 9;
	//float vz = 10;
	//MoveState state = 11;
	float speed = 8;
	float aimYaw = 9;
	MoveState state = 10;
}

message ObjectInfo
{
	uint64 object_id = 1;
	ObjectType object_type = 2;
	PosInfo pos_info = 3;
	uint64 spawnIdx = 4;
	// ...
}

message ProjectileInfo
{
	uint64 object_id = 1;
	float x = 2;
	float y = 3;
	float z = 4;
	float yaw = 5;
	float pitch = 6;
	float roll = 7;
	bool bFight = 8;
}